--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "specificuser",
-  "version": "0.0.1"
+  "version": "0.0.1",
   "dependencies": {
     "express": "2.5.2",
     "socket.io": "0.8.7"
